// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Header Snapshots renders correctly 1`] = `
<th
  className="objectlist-table__th objectlist-table__th--border-bottom "
  colSpan={undefined}
  rowSpan={undefined}
  style={Object {}}
>
  <HeaderField
    SortAscIcon={
      <i
        aria-hidden="true"
        className="fa fa-caret-up"
      />
    }
    SortDescIcon={
      <i
        aria-hidden="true"
        className="fa fa-caret-down"
      />
    }
    UnsortedIcon={
      <i
        aria-hidden="true"
        className="fa fa-sort"
      />
    }
    activeSort={null}
    dataKey="header_sort_key"
    header="Header Text"
    item={[MockFunction]}
    optional={false}
    sortKey="🍬"
    updateSorting={undefined}
  />
</th>
`;

exports[`Table Header Snapshots renders correctly with multiple header items 1`] = `
<th
  className="objectlist-table__th objectlist-table__th--border-bottom "
  colSpan={undefined}
  rowSpan={undefined}
  style={Object {}}
>
  <HeaderField
    SortAscIcon={
      <i
        aria-hidden="true"
        className="fa fa-caret-up"
      />
    }
    SortDescIcon={
      <i
        aria-hidden="true"
        className="fa fa-caret-down"
      />
    }
    UnsortedIcon={
      <i
        aria-hidden="true"
        className="fa fa-sort"
      />
    }
    activeSort={null}
    dataKey="header_sort_key"
    header="Header Text"
    item={[MockFunction]}
    optional={false}
    sortKey="🍬"
    updateSorting={undefined}
  />
  <HeaderField
    SortAscIcon={
      <i
        aria-hidden="true"
        className="fa fa-caret-up"
      />
    }
    SortDescIcon={
      <i
        aria-hidden="true"
        className="fa fa-caret-down"
      />
    }
    UnsortedIcon={
      <i
        aria-hidden="true"
        className="fa fa-sort"
      />
    }
    activeSort={null}
    dataKey="header_two_key"
    header="Header Two Text"
    item={[MockFunction]}
    optional={false}
    sortKey="🍬"
    updateSorting={undefined}
  />
</th>
`;
